// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address.vue Should display extra tabs for contracts addresses 1`] = `
<div class="container container--fluid">
  <div class="row mb-2">
    <div class="col col-3">
      <div class="v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          Balance: 1e-14 Ether
        </div>
      </div>
    </div>
    <div class="spacer"></div>
    <div class="col col-2 align-self-end">
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div> <button type="button" class="v-btn v-btn--depressed v-btn--flat v-btn--outlined theme--light v-size--small error--text"><span class="v-btn__content">
                Remove contract
            </span></button>
    </div>
  </div>
  <div class="v-tabs theme--light">
    <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text" data-booted="true">
      <div class="v-slide-group__prev v-slide-group__prev--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
      <div class="v-slide-group__wrapper">
        <div class="v-slide-group__content v-tabs-bar__content">
          <div class="v-tabs-slider-wrapper" style="height: 2px; left: 0px; width: 0px;">
            <div class="v-tabs-slider"></div>
          </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active">Transactions</a> <a tabindex="0" href="#contract" aria-selected="false" role="tab" class="v-tab" id="contractTab">Contract</a> <a tabindex="0" href="#storage" aria-selected="false" role="tab" class="v-tab" id="storageTab">Storage</a>
          <!---->
        </div>
      </div>
      <div class="v-slide-group__next v-slide-group__next--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
    </div>
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <transition-stub name="v-window-x-transition">
          <div class="v-window-item v-window-item--active" id="transactions">
            <div class="v-data-table v-data-table--has-bottom theme--light">
              <div class="v-data-table__wrapper">
                <table>
                  <colgroup>
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                  </colgroup>
                  <thead class="v-data-table-header">
                    <tr>
                      <th role="columnheader" scope="col" aria-label="Txn Hash: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Txn Hash</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Method: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Method</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to remove sorting." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Value: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Value</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Fee: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Fee</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr class="v-data-table__empty-wrapper">
                      <td colspan="8">
                        No transactions found - <a href="https://doc.tryethernal.com/getting-started/cli" target="_blank">Did you set up the CLI?</a></td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div class="v-data-footer">
                <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-select">
                    <div class="v-input__control">
                      <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-148" class="v-input__slot">
                        <div class="v-select__slot">
                          <div class="v-select__selections">
                            <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-148" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                          </div>
                          <div class="v-input__append-inner">
                            <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                          </div><input type="hidden" value="10">
                        </div>
                        <div class="v-menu">
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-data-footer__pagination">–</div>
                <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
                <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
              </div>
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <div class="v-window v-item-group theme--light v-tabs-items">
    <div class="v-window__container">
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
      <transition-stub name="v-window-x-transition" style="display: none;">
        <!---->
      </transition-stub>
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Address.vue Should display the contract interaction interface under the contract tab if there is an ABI 1`] = `
<div class="container container--fluid">
  <div class="row mb-2">
    <div class="col col-3">
      <div class="v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          Balance: 1e-14 Ether
        </div>
      </div>
    </div>
    <div class="spacer"></div>
    <div class="col col-2 align-self-end">
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div> <button type="button" class="v-btn v-btn--depressed v-btn--flat v-btn--outlined theme--light v-size--small error--text"><span class="v-btn__content">
                Remove contract
            </span></button>
    </div>
  </div>
  <div class="v-tabs theme--light">
    <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text" data-booted="true">
      <div class="v-slide-group__prev v-slide-group__prev--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
      <div class="v-slide-group__wrapper">
        <div class="v-slide-group__content v-tabs-bar__content">
          <div class="v-tabs-slider-wrapper" style="height: 2px; left: 0px; width: 0px;">
            <div class="v-tabs-slider"></div>
          </div><a tabindex="0" href="#transactions" aria-selected="false" role="tab" class="v-tab">Transactions</a> <a tabindex="0" href="#contract" aria-selected="true" role="tab" class="v-tab v-tab--active" id="contractTab">Contract</a> <a tabindex="0" href="#storage" aria-selected="false" role="tab" class="v-tab" id="storageTab">Storage</a>
          <!---->
        </div>
      </div>
      <div class="v-slide-group__next v-slide-group__next--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
    </div>
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <transition-stub name="v-window-x-reverse-transition">
          <div class="v-window-item" id="transactions" style="display: none;">
            <div class="v-data-table v-data-table--has-bottom theme--light">
              <div class="v-data-table__wrapper">
                <table>
                  <colgroup>
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                  </colgroup>
                  <thead class="v-data-table-header">
                    <tr>
                      <th role="columnheader" scope="col" aria-label="Txn Hash: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Txn Hash</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Method: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Method</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to remove sorting." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Value: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Value</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Fee: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Fee</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr class="v-data-table__empty-wrapper">
                      <td colspan="8">
                        No transactions found - <a href="https://doc.tryethernal.com/getting-started/cli" target="_blank">Did you set up the CLI?</a></td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div class="v-data-footer">
                <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-select">
                    <div class="v-input__control">
                      <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-197" class="v-input__slot">
                        <div class="v-select__slot">
                          <div class="v-select__selections">
                            <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-197" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                          </div>
                          <div class="v-input__append-inner">
                            <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                          </div><input type="hidden" value="10">
                        </div>
                        <div class="v-menu">
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-data-footer__pagination">–</div>
                <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
                <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
              </div>
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <div class="v-window v-item-group theme--light v-tabs-items">
    <div class="v-window__container">
      <transition-stub name="v-window-x-transition">
        <div class="v-window-item v-window-item--active" id="contract">
          <h4>Artifact</h4>
          <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
            <!---->
            <div>
              <div role="dialog" class="v-dialog__container">
                <!---->
              </div>
              <div class="v-card__text">
                Artifact for contract "<b>Amalfi</b>" has been uploaded. (<a href="#">Edit</a>)
                <!---->
              </div>
            </div>
          </div>
          <h4>Call Options</h4>
          <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
            <div>
              <div class="v-card__text">
                <div class="row">
                  <div class="col col-5">
                    <div class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select">
                      <div class="v-input__control">
                        <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-220" class="v-input__slot">
                          <fieldset aria-hidden="true">
                            <legend style="width: 0px;"><span>​</span></legend>
                          </fieldset>
                          <div class="v-select__slot"><label for="input-220" class="v-label theme--light" style="left: 0px; position: absolute;">Select from address</label>
                            <div class="v-select__selections"><input id="input-220" readonly="readonly" type="text" aria-readonly="false" autocomplete="off"></div>
                            <div class="v-input__append-inner">
                              <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                            </div><input type="hidden">
                          </div>
                          <div class="v-menu">
                            <!---->
                          </div>
                        </div>
                        <div class="v-text-field__details">
                          <div class="v-messages theme--light">
                            <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <fieldset aria-hidden="true">
                            <legend style="width: 0px;"><span>​</span></legend>
                          </fieldset>
                          <div class="v-text-field__slot"><label for="input-225" class="v-label theme--light" style="left: 0px; position: absolute;">Gas Price (wei)</label><input id="input-225" type="number"></div>
                        </div>
                        <div class="v-text-field__details">
                          <div class="v-messages theme--light">
                            <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class="v-input v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <fieldset aria-hidden="true">
                            <legend style="width: 0px;"><span>​</span></legend>
                          </fieldset>
                          <div class="v-text-field__slot"><label for="input-228" class="v-label theme--light" style="left: 0px; position: absolute;">Maximum Gas</label><input id="input-228" type="number"></div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h4>Read Methods</h4>
          <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
            <div>
              <div class="v-card__text">
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="pb-1 font-weight-bold">_feeBasisPoints</div>
                      <div>=&gt; uint256</div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;"></div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;">

                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="pb-1 font-weight-bold">owner</div>
                      <div>=&gt; address</div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;"></div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;">

                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="pb-1 font-weight-bold">depositsOf</div>
                      <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <fieldset aria-hidden="true">
                              <legend style="width: 0px;"><span>​</span></legend>
                            </fieldset>
                            <div class="v-text-field__slot"><label for="input-235" class="v-label theme--light" style="left: 0px; position: absolute;">address payee</label><input id="input-235" type="text"></div>
                          </div>
                        </div>
                      </div>
                      <div>=&gt; uint256</div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;"></div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;">

                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="pb-1 font-weight-bold">maturityOf</div>
                      <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <fieldset aria-hidden="true">
                              <legend style="width: 0px;"><span>​</span></legend>
                            </fieldset>
                            <div class="v-text-field__slot"><label for="input-238" class="v-label theme--light" style="left: 0px; position: absolute;">address payee</label><input id="input-238" type="text"></div>
                          </div>
                        </div>
                      </div>
                      <div>=&gt; uint256</div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;"></div>
                      <div id="call" class="grey lighten-3 pa-2" style="display: none;">

                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h4>Write Methods</h4>
          <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
            <div>
              <div class="v-card__text">
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="font-weight-bold">renounceOwnership</div>
                      <div class="grey lighten-3 pa-2 mt-1" style="display: none;">
                        <div style="display: none;"></div>
                        <div style="display: none;">
                          Tx: <a href="/transaction/null" target="_blank"></a></div>
                        <div style="display: none;">
                          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
                              <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
                            </svg>
                            <div class="v-progress-circular__info"></div>
                          </div>Waiting for receipt...
                        </div>
                        <div class="mt-1" style="display: none;">
                          Status: Failed
                          <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-check-circle theme--light success--text text--lighten-1" style="font-size: 16px; display: none;"></i> <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-alert-circle theme--light error--text text--lighten-1" style="font-size: 16px;"></i>
                        </div>
                        <div style="display: none;">
                          Couldn't get receipt.
                        </div>
                      </div>
                      <hr role="separator" aria-orientation="horizontal" class="my-2 v-divider theme--light">
                      <div class="col-4 px-0 py-1">
                        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                          <div class="v-input__control">
                            <div class="v-input__slot">
                              <fieldset aria-hidden="true">
                                <legend style="width: 0px;"><span>​</span></legend>
                              </fieldset>
                              <div class="v-text-field__slot"><label for="input-246" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Value (in Ether)</label><input small="" id="input-246" type="number"></div>
                            </div>
                          </div>
                        </div>
                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="font-weight-bold">transferOwnership</div>
                      <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <fieldset aria-hidden="true">
                              <legend style="width: 0px;"><span>​</span></legend>
                            </fieldset>
                            <div class="v-text-field__slot"><label for="input-249" class="v-label theme--light" style="left: 0px; position: absolute;">address newOwner</label><input id="input-249" type="text"></div>
                          </div>
                        </div>
                      </div>
                      <div class="grey lighten-3 pa-2 mt-1" style="display: none;">
                        <div style="display: none;"></div>
                        <div style="display: none;">
                          Tx: <a href="/transaction/null" target="_blank"></a></div>
                        <div style="display: none;">
                          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
                              <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
                            </svg>
                            <div class="v-progress-circular__info"></div>
                          </div>Waiting for receipt...
                        </div>
                        <div class="mt-1" style="display: none;">
                          Status: Failed
                          <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-check-circle theme--light success--text text--lighten-1" style="font-size: 16px; display: none;"></i> <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-alert-circle theme--light error--text text--lighten-1" style="font-size: 16px;"></i>
                        </div>
                        <div style="display: none;">
                          Couldn't get receipt.
                        </div>
                      </div>
                      <hr role="separator" aria-orientation="horizontal" class="my-2 v-divider theme--light">
                      <div class="col-4 px-0 py-1">
                        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                          <div class="v-input__control">
                            <div class="v-input__slot">
                              <fieldset aria-hidden="true">
                                <legend style="width: 0px;"><span>​</span></legend>
                              </fieldset>
                              <div class="v-text-field__slot"><label for="input-254" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Value (in Ether)</label><input small="" id="input-254" type="number"></div>
                            </div>
                          </div>
                        </div>
                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="font-weight-bold">setMaturity</div>
                      <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <fieldset aria-hidden="true">
                              <legend style="width: 0px;"><span>​</span></legend>
                            </fieldset>
                            <div class="v-text-field__slot"><label for="input-257" class="v-label theme--light" style="left: 0px; position: absolute;">address payee</label><input id="input-257" type="text"></div>
                          </div>
                        </div>
                      </div>
                      <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <fieldset aria-hidden="true">
                              <legend style="width: 0px;"><span>​</span></legend>
                            </fieldset>
                            <div class="v-text-field__slot"><label for="input-258" class="v-label theme--light" style="left: 0px; position: absolute;">uint256 maturity</label><input id="input-258" type="text"></div>
                          </div>
                        </div>
                      </div>
                      <div class="grey lighten-3 pa-2 mt-1" style="display: none;">
                        <div style="display: none;"></div>
                        <div style="display: none;">
                          Tx: <a href="/transaction/null" target="_blank"></a></div>
                        <div style="display: none;">
                          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
                              <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
                            </svg>
                            <div class="v-progress-circular__info"></div>
                          </div>Waiting for receipt...
                        </div>
                        <div class="mt-1" style="display: none;">
                          Status: Failed
                          <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-check-circle theme--light success--text text--lighten-1" style="font-size: 16px; display: none;"></i> <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-alert-circle theme--light error--text text--lighten-1" style="font-size: 16px;"></i>
                        </div>
                        <div style="display: none;">
                          Couldn't get receipt.
                        </div>
                      </div>
                      <hr role="separator" aria-orientation="horizontal" class="my-2 v-divider theme--light">
                      <div class="col-4 px-0 py-1">
                        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                          <div class="v-input__control">
                            <div class="v-input__slot">
                              <fieldset aria-hidden="true">
                                <legend style="width: 0px;"><span>​</span></legend>
                              </fieldset>
                              <div class="v-text-field__slot"><label for="input-263" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Value (in Ether)</label><input small="" id="input-263" type="number"></div>
                            </div>
                          </div>
                        </div>
                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="font-weight-bold">deposit</div>
                      <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <fieldset aria-hidden="true">
                              <legend style="width: 0px;"><span>​</span></legend>
                            </fieldset>
                            <div class="v-text-field__slot"><label for="input-266" class="v-label theme--light" style="left: 0px; position: absolute;">address payee</label><input id="input-266" type="text"></div>
                          </div>
                        </div>
                      </div>
                      <div class="grey lighten-3 pa-2 mt-1" style="display: none;">
                        <div style="display: none;"></div>
                        <div style="display: none;">
                          Tx: <a href="/transaction/null" target="_blank"></a></div>
                        <div style="display: none;">
                          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
                              <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
                            </svg>
                            <div class="v-progress-circular__info"></div>
                          </div>Waiting for receipt...
                        </div>
                        <div class="mt-1" style="display: none;">
                          Status: Failed
                          <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-check-circle theme--light success--text text--lighten-1" style="font-size: 16px; display: none;"></i> <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-alert-circle theme--light error--text text--lighten-1" style="font-size: 16px;"></i>
                        </div>
                        <div style="display: none;">
                          Couldn't get receipt.
                        </div>
                      </div>
                      <hr role="separator" aria-orientation="horizontal" class="my-2 v-divider theme--light">
                      <div class="col-4 px-0 py-1">
                        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                          <div class="v-input__control">
                            <div class="v-input__slot">
                              <fieldset aria-hidden="true">
                                <legend style="width: 0px;"><span>​</span></legend>
                              </fieldset>
                              <div class="v-text-field__slot"><label for="input-271" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Value (in Ether)</label><input small="" id="input-271" type="number"></div>
                            </div>
                          </div>
                        </div>
                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
                <div class="row pb-4">
                  <div class="col col-5">
                    <div>
                      <div class="font-weight-bold">withdraw</div>
                      <div class="grey lighten-3 pa-2 mt-1" style="display: none;">
                        <div style="display: none;"></div>
                        <div style="display: none;">
                          Tx: <a href="/transaction/null" target="_blank"></a></div>
                        <div style="display: none;">
                          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
                              <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
                            </svg>
                            <div class="v-progress-circular__info"></div>
                          </div>Waiting for receipt...
                        </div>
                        <div class="mt-1" style="display: none;">
                          Status: Failed
                          <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-check-circle theme--light success--text text--lighten-1" style="font-size: 16px; display: none;"></i> <i aria-hidden="true" class="v-icon notranslate mr-2 align-with-text mdi mdi-alert-circle theme--light error--text text--lighten-1" style="font-size: 16px;"></i>
                        </div>
                        <div style="display: none;">
                          Couldn't get receipt.
                        </div>
                      </div>
                      <hr role="separator" aria-orientation="horizontal" class="my-2 v-divider theme--light">
                      <div class="col-4 px-0 py-1">
                        <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                          <div class="v-input__control">
                            <div class="v-input__slot">
                              <fieldset aria-hidden="true">
                                <legend style="width: 0px;"><span>​</span></legend>
                              </fieldset>
                              <div class="v-text-field__slot"><label for="input-278" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Value (in Ether)</label><input small="" id="input-278" type="number"></div>
                            </div>
                          </div>
                        </div>
                      </div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="v-window-x-transition" style="display: none;">
        <!---->
      </transition-stub>
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Address.vue Should show the transactions for this address 1`] = `
<div class="container container--fluid">
  <div class="row mb-2">
    <div class="col col-3">
      <div class="v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          Balance: 1e-14 Ether
        </div>
      </div>
    </div>
    <div class="spacer"></div>
    <!---->
  </div>
  <div class="v-tabs theme--light">
    <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text" data-booted="true">
      <div class="v-slide-group__prev v-slide-group__prev--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
      <div class="v-slide-group__wrapper">
        <div class="v-slide-group__content v-tabs-bar__content">
          <div class="v-tabs-slider-wrapper" style="height: 2px; left: 0px; width: 0px;">
            <div class="v-tabs-slider"></div>
          </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active">Transactions</a>
          <!---->
          <!---->
          <!---->
        </div>
      </div>
      <div class="v-slide-group__next v-slide-group__next--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
    </div>
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <transition-stub name="v-window-x-transition">
          <div class="v-window-item v-window-item--active" id="transactions">
            <div class="v-data-table v-data-table--has-bottom theme--light">
              <div class="v-data-table__wrapper">
                <table>
                  <colgroup>
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                  </colgroup>
                  <thead class="v-data-table-header">
                    <tr>
                      <th role="columnheader" scope="col" aria-label="Txn Hash: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Txn Hash</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Method: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Method</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to remove sorting." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Value: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Value</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Fee: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Fee</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr class="">
                      <td class="text-start"><span><i aria-hidden="true" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate mr-2 mdi mdi-help-circle theme--light grey--text text--lighten-1" style="font-size: 16px;"></i></span><span class="v-tooltip v-tooltip--top"><!----></span> <span><a href="#/transaction/0x0abc16784486a819816df57d01eefccbe161d7019f9f3c235e18af07468fb194ef1" class="">0x0abc1678...94ef1</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x0abc16784486a819816df57d01eefccbe161d7019f9f3c235e18af07468fb194ef1" value="0x0abc16784486a819816df57d01eefccbe161d7019f9f3c235e18af07468fb194ef1"></span>
                        <!----></span>
                      </td>
                      <td class="text-start"><span><span class="v-chip v-chip--label theme--light v-size--small primary lighten-1" style="display: none;"><span class="v-chip__content"></span></span></span></td>
                      <td class="text-start"><a href="#/block/1" class="">1</a></td>
                      <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                    05/21 12:07:42 AM
                </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
                      <td class="text-start">
                        <!----> <span><a href="#/address/0x2" class="">0x2...0x2</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x2" value="0x2"></span>
                        <!----></span>
                      </td>
                      <td class="text-start"><span class="mr-2 v-chip v-chip--no-color theme--light v-size--x-small"><span class="v-chip__content">self</span></span> <span><a href="#/address/123" class="">123...123</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-123" value="123"></span>
                        <!----></span>
                      </td>
                      <td class="text-start">
                        0 Ether
                      </td>
                      <td class="text-start"></td>
                    </tr>
                    <tr class="">
                      <td class="text-start"><span><i aria-hidden="true" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate mr-2 mdi mdi-help-circle theme--light grey--text text--lighten-1" style="font-size: 16px;"></i></span><span class="v-tooltip v-tooltip--top"><!----></span> <span><a href="#/transaction/0x060034486a819816df57d01eefccbe161d7019f9f3c235e18af07468fb194ef0" class="">0x06003448...94ef0</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x060034486a819816df57d01eefccbe161d7019f9f3c235e18af07468fb194ef0" value="0x060034486a819816df57d01eefccbe161d7019f9f3c235e18af07468fb194ef0"></span>
                        <!----></span>
                      </td>
                      <td class="text-start"><span><span class="v-chip v-chip--label theme--light v-size--small primary lighten-1" style="display: none;"><span class="v-chip__content"></span></span></span></td>
                      <td class="text-start"><a href="#/block/1" class="">1</a></td>
                      <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                    05/21 12:07:42 AM
                </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
                      <td class="text-start">
                        <!----> <span><a href="#/address/0x1" class="">0x1...0x1</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x1" value="0x1"></span>
                        <!----></span>
                      </td>
                      <td class="text-start"><span class="mr-2 v-chip v-chip--no-color theme--light v-size--x-small"><span class="v-chip__content">self</span></span> <span><a href="#/address/123" class="">123...123</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-123" value="123"></span>
                        <!----></span>
                      </td>
                      <td class="text-start">
                        0 Ether
                      </td>
                      <td class="text-start"></td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div class="v-data-footer">
                <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-select">
                    <div class="v-input__control">
                      <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-74" class="v-input__slot">
                        <div class="v-select__slot">
                          <div class="v-select__selections">
                            <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-74" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                          </div>
                          <div class="v-input__append-inner">
                            <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                          </div><input type="hidden" value="10">
                        </div>
                        <div class="v-menu">
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-data-footer__pagination">1-2 of 2</div>
                <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
                <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
              </div>
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <div class="v-window v-item-group theme--light v-tabs-items">
    <div class="v-window__container">
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
      <transition-stub name="v-window-x-transition" style="display: none;">
        <!---->
      </transition-stub>
      <transition-stub name="v-window-x-transition">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Address.vue Should sync the balance when loaded 1`] = `
<div class="container container--fluid">
  <div class="row mb-2">
    <div class="col col-3">
      <div class="v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          Balance: 1e-14 Ether
        </div>
      </div>
    </div>
    <div class="spacer"></div>
    <!---->
  </div>
  <div class="v-tabs theme--light">
    <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text">
      <div class="v-slide-group__prev v-slide-group__prev--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
      <div class="v-slide-group__wrapper">
        <div class="v-slide-group__content v-tabs-bar__content">
          <div class="v-tabs-slider-wrapper" style="transition: none;">
            <div class="v-tabs-slider"></div>
          </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active">Transactions</a>
          <!---->
          <!---->
          <!---->
        </div>
      </div>
      <div class="v-slide-group__next v-slide-group__next--disabled">
        <transition-stub name="fade-transition"></transition-stub>
      </div>
    </div>
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <transition-stub name="">
          <div class="v-window-item v-window-item--active" id="transactions">
            <div class="v-data-table v-data-table--has-bottom theme--light">
              <div class="v-data-table__wrapper">
                <table>
                  <colgroup>
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                    <col class="">
                  </colgroup>
                  <thead class="v-data-table-header">
                    <tr>
                      <th role="columnheader" scope="col" aria-label="Txn Hash: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Txn Hash</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Method: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Method</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to remove sorting." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Value: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Value</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                      <th role="columnheader" scope="col" aria-label="Fee: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Fee</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    </tr>
                  </thead>
                  <thead>
                    <tr class="v-data-table__progress">
                      <th colspan="8" class="column">
                        <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--absolute theme--light" style="height: 4px;">
                          <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 0%; width: 100%;"></div>
                          <div class="v-progress-linear__buffer"></div>
                          <transition-stub name="fade-transition">
                            <div class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active">
                              <div class="v-progress-linear__indeterminate long primary"></div>
                              <div class="v-progress-linear__indeterminate short primary"></div>
                            </div>
                          </transition-stub>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr class="v-data-table__empty-wrapper">
                      <td colspan="8">Loading items...</td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div class="v-data-footer">
                <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
                    <div class="v-input__control">
                      <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-30" class="v-input__slot">
                        <div class="v-select__slot">
                          <div class="v-select__selections">
                            <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-30" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                          </div>
                          <div class="v-input__append-inner">
                            <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                          </div><input type="hidden" value="10">
                        </div>
                        <div class="v-menu">
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-data-footer__pagination">–</div>
                <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
                <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
              </div>
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <div class="v-window v-item-group theme--light v-tabs-items">
    <div class="v-window__container">
      <transition-stub name="">
        <!---->
      </transition-stub>
      <transition-stub name="" style="display: none;">
        <!---->
      </transition-stub>
      <transition-stub name="">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;
